test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/block-ephemeral-containers/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-ephemeral-containers
spec:
  background: true
  rules:
  - name: block-ephemeral-containers
    match:
      any:
      - resources:
          kinds:
            - Pod
    validate:
      validationFailureAction: Enforce
      cel:
        expressions:
          - expression: "!has(object.spec.ephemeralContainers)"
            message: "Ephemeral (debug) containers are not permitted."
