test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/block-ephemeral-containers/validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    reports.kyverno.io/enabled: "true"
  name: cpol-block-ephemeral-containers
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: block-ephemeral-containers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
      - pods/ephemeralcontainers
  validations:
  - expression: '!has(object.spec.ephemeralContainers)'
    message: Ephemeral (debug) containers are not permitted.
