test/conformance/chainsaw/generate-validating-admission-policy/clusterpolicy/standard/generate/block-ephemeral-containers/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-ephemeral-containers
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: block-ephemeral-containers
  - name: step-02
    try:
    - assert:
        file: validatingadmissionpolicy.yaml
    - assert:
        file: validatingadmissionpolicybinding.yaml
  - name: step-03
    try:
    - apply:
        file: pod.yaml
  - name: step-04
    try:
    - script:
        content: if kubectl debug -it test-pod --image=busybox:1.35 --target=busybox; then exit 1; else exit 0; fi;
